Added functionality for user to determine how many items are rendered in the collection

--- a/src/style.css
+++ b/src/style.css
@@ -134,6 +134,10 @@ body{
     align-items: center;
 }
 
+.navText{
+  font-size: 30px;
+}
+
 /* Collection CSS */
 .collectionContainer{
   margin-top: 25px;
