--- a/src/style.css
+++ b/src/style.css
@@ -139,13 +139,13 @@ body{
 }
 
 /* Collection CSS */
-.buttonContainer{
+.buttonContainer, .inputContainer{
   margin-top: 15px;
   display: flex;
   justify-content: center;
 }
 
-.numPokemon{
+.numPokemon, .newPokemon{
   height: 45px;
   margin-right: 10px;
   background-color: #2195f300;
@@ -164,7 +164,7 @@ body{
 .dark::placeholder{
   color: white;
 }
-.collectionBTN{
+.collectionBTN, .pokemonBTN{
   border-radius: 15%;
   background-color: rgba(255, 255, 255, 0);
   border: solid black 2px;
